# Github-Releases

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: cmd.rs  config.rs  download.rs  gh-release.rs  github.rs  lib.rs  main.rs  sources.rs  util.rs
src/github/: gh_prerelease.rs  gh_release.rs  mod.rs
