[package]
name = "ghr"
version = "0.1.0"
authors = ["Ben Burbage <iambenzo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
indicatif = "0.13.0"
reqwest = "0.9.24"
failure = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
